# sekvens

./: CHIP.txt  Cargo.toml  README.md  memory.x  size.sh  symbol-size.sh
.cargo/: config
src/: app_input.rs  app_state.rs  button.rs  buttons.rs  flip_pin.rs  input.rs  led_grid.rs  main.rs  mstate.rs  music.rs  state.rs  track.rs  val.rs
