[package]
name = "sekvens"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.4.0" # rtt is "real time transfer"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# Notice chip here
stm32g0xx-hal = { version = "0.2", features = ["rt", "stm32g030"] }

# Versions determined by the stm32f4xx-hal dependency
cortex-m = "*"
cortex-m-rt = "*"

alg = { version = "*", path = "../alg" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
incremental = false
opt-level = 3
lto = "fat"
debug-assertions = true
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
incremental = false
opt-level = 3
lto = "fat"
debug-assertions = false
overflow-checks = true # false makes code slower

# optimize all the other dependencies, this reduces
# the flash size for development by optimizing away dependecies
# but not the top crate.
[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = "s"
